# LearnHDMap

./: README.md  Untitled Diagram.drawio
catkin_ws/src/hdmap_lanelet2/: CMakeLists.txt  package.xml
catkin_ws/src/hdmap_lanelet2/launch/: aerial_viewer_points.launch
catkin_ws/src/hdmap_lanelet2/nodes/aerial_viewer_points/: aerial_viewer_points.cpp  aerial_viewer_points.h  aerial_viewer_points_node.cpp  image_preprocessor.h  points_preprocessor.cpp
catkin_ws/src/hdmap_lanelet2/param/: config.yaml
communication/: CMakeLists.txt  car_id.ini  communication_node.cpp  note.md  package.xml  uvcvideo.ko
communication/include/MessageProtocol/: ADTProtocol.h  APPProtocol.h  CCUProtocol.h
communication/include/TCP/: TCPClient.h  base.h
communication/include/Thread/: HandleADT.h  HandleAPP.h  HandleCCU.h  MessageCenter.h
communication/include/Utils/: Utils.h
communication/launch/: communication.launch  drive_ethernet_killer.sh  launch_shutdown_video.sh  launch_transfer_video.sh  launch_transfer_video_front.sh  launch_transfer_video_left.sh  launch_transfer_video_right.sh  switch.sh  transfer_video.sh  transfer_video_front.sh  transfer_video_left.sh  transfer_video_right.sh
communication/src/: HandleADT.cpp  HandleAPP.cpp  HandleCCU.cpp  MessageCenter.cpp  TCPClient.cpp  Utils.cpp  base.cpp
hdmap/: CMakeLists.txt  note.md  package.xml
hdmap/launch/: calibration_publisher.launch  gen_costmap.launch  gen_trajectory.launch  hdmap_lanelet.launch
hdmap/maps/: costmap.yaml  map.pgm  map.yaml  my_lanelet_map.osm  traj.json
hdmap/nodes/calibration_pub/: calibration_publisher.cpp
hdmap/nodes/gen_costmap/: costmap.cpp  gen_costmap.cpp  points2costmap.cpp
hdmap/nodes/gen_trajectory/: gen_trajectory.cpp  gen_trajectory.h
hdmap/nodes/hdmap_lanelet/: hdmap_lanelet.cpp  hdmap_lanelet.h  hdmap_lanelet_node.cpp  image_preprocessor.cpp  map_generation.cpp  maps.h  points_preprocessor.h
hdmap/nodes/lanelet2_extension/: extension.cpp  extension.h
hdmap/param/: config.yaml  zed_lidar_camera_1080p.yaml
utils/rosbag_merge/: CMakeLists.txt  package.xml
