<?xml version="1.0"?>
<package format="2">
    <name>hdmap</name>
    <version>0.0.0</version>
    <description>The hdmap_lanelet2 package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="heyufei@todo.todo">heyufei</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>lanelet2_core</build_depend>
    <build_depend>lanelet2_io</build_depend>
    <build_depend>lanelet2_maps</build_depend>
    <build_depend>lanelet2_projection</build_depend>
    <build_depend>lanelet2_routing</build_depend>
    <build_depend>lanelet2_traffic_rules</build_depend>
    <build_depend>lanelet2_validation</build_depend>
    <build_depend>lanelet2_examples</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>hdmap_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>rosconsole</build_depend>

    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>pcl_conversions</build_export_depend>
    <build_export_depend>lanelet2_core</build_export_depend>
    <build_export_depend>lanelet2_io</build_export_depend>
    <build_export_depend>lanelet2_maps</build_export_depend>
    <build_export_depend>lanelet2_projection</build_export_depend>
    <build_export_depend>lanelet2_routing</build_export_depend>
    <build_export_depend>lanelet2_traffic_rules</build_export_depend>
    <build_export_depend>lanelet2_validation</build_export_depend>
    <build_export_depend>lanelet2_examples</build_export_depend>
    <build_export_depend>yaml-cpp</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <build_export_depend>hdmap_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>rosconsole</build_export_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>lanelet2_core</exec_depend>
    <exec_depend>lanelet2_io</exec_depend>
    <exec_depend>lanelet2_maps</exec_depend>
    <exec_depend>lanelet2_projection</exec_depend>
    <exec_depend>lanelet2_routing</exec_depend>
    <exec_depend>lanelet2_traffic_rules</exec_depend>
    <exec_depend>lanelet2_validation</exec_depend>
    <exec_depend>lanelet2_examples</exec_depend>
    <exec_depend>yaml-cpp</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>hdmap_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
